// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableCard should not error with default callback props 1`] = `
<div>
  <div
    class="components-card is-size-medium woocommerce-table has-menu css-1xs3c37-CardUI e1q7k77g0"
  >
    <div
      class="components-flex components-card__header is-size-medium e1q7k77g1 css-jsa6v9-Flex-HeaderUI eboqfv50"
    >
      <h2
        class="css-1ahfdc3-Text e15wbhsk0"
        size="20"
      >
        Revenue
      </h2>
      <div
        class="woocommerce-table__actions"
      />
      <div
        class="woocommerce-ellipsis-menu"
      >
        <div
          class="components-dropdown"
        >
          <button
            aria-expanded="true"
            class="components-button woocommerce-ellipsis-menu__toggle is-opened"
            title="Choose which values to display"
            type="button"
          >
            <svg
              class="gridicon gridicons-ellipsis"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g>
                <path
                  d="M7 12c0 1.104-.896 2-2 2s-2-.896-2-2 .896-2 2-2 2 .896 2 2zm12-2c-1.104 0-2 .896-2 2s.896 2 2 2 2-.896 2-2-.896-2-2-2zm-7 0c-1.104 0-2 .896-2 2s.896 2 2 2 2-.896 2-2-.896-2-2-2z"
                />
              </g>
            </svg>
          </button>
          <div
            tabindex="-1"
          >
            <div>
              <div>
                <div
                  class="components-popover components-dropdown__content woocommerce-ellipsis-menu__popover is-without-arrow"
                >
                  <div
                    class="components-popover__content"
                    tabindex="-1"
                  >
                    <div
                      style="position: relative;"
                    >
                      <iframe
                        aria-hidden="true"
                        frameborder="0"
                        src="about:blank"
                        style="display: block; opacity: 0; position: absolute; top: 0px; left: 0px; height: 100%; width: 100%; overflow: hidden; pointer-events: none; z-index: -1;"
                        tabindex="-1"
                      />
                      <div
                        aria-orientation="vertical"
                        class="woocommerce-ellipsis-menu__content"
                        role="menu"
                      >
                        <div
                          class="woocommerce-ellipsis-menu__title"
                        >
                          Columns:
                        </div>
                        <div
                          aria-checked="true"
                          class="woocommerce-ellipsis-menu__item"
                          role="menuitemcheckbox"
                          tabindex="0"
                        >
                          <div
                            class="components-base-control components-toggle-control"
                          >
                            <div
                              class="components-base-control__field"
                            >
                              <span
                                class="components-form-toggle is-checked"
                              >
                                <input
                                  aria-hidden="true"
                                  checked=""
                                  class="components-form-toggle__input"
                                  tabindex="-1"
                                  type="checkbox"
                                />
                                <span
                                  class="components-form-toggle__track"
                                />
                                <span
                                  class="components-form-toggle__thumb"
                                />
                              </span>
                              Orders
                            </div>
                          </div>
                        </div>
                        <div
                          aria-checked="true"
                          class="woocommerce-ellipsis-menu__item"
                          role="menuitemcheckbox"
                          tabindex="0"
                        >
                          <div
                            class="components-base-control components-toggle-control"
                          >
                            <div
                              class="components-base-control__field"
                            >
                              <span
                                class="components-form-toggle is-checked"
                              >
                                <input
                                  aria-hidden="true"
                                  checked=""
                                  class="components-form-toggle__input"
                                  tabindex="-1"
                                  type="checkbox"
                                />
                                <span
                                  class="components-form-toggle__track"
                                />
                                <span
                                  class="components-form-toggle__thumb"
                                />
                              </span>
                              Refunds
                            </div>
                          </div>
                        </div>
                        <div
                          aria-checked="true"
                          class="woocommerce-ellipsis-menu__item"
                          role="menuitemcheckbox"
                          tabindex="0"
                        >
                          <div
                            class="components-base-control components-toggle-control"
                          >
                            <div
                              class="components-base-control__field"
                            >
                              <span
                                class="components-form-toggle is-checked"
                              >
                                <input
                                  aria-hidden="true"
                                  checked=""
                                  class="components-form-toggle__input"
                                  tabindex="-1"
                                  type="checkbox"
                                />
                                <span
                                  class="components-form-toggle__track"
                                />
                                <span
                                  class="components-form-toggle__thumb"
                                />
                              </span>
                              Coupons
                            </div>
                          </div>
                        </div>
                        <div
                          aria-checked="true"
                          class="woocommerce-ellipsis-menu__item"
                          role="menuitemcheckbox"
                          tabindex="0"
                        >
                          <div
                            class="components-base-control components-toggle-control"
                          >
                            <div
                              class="components-base-control__field"
                            >
                              <span
                                class="components-form-toggle is-checked"
                              >
                                <input
                                  aria-hidden="true"
                                  checked=""
                                  class="components-form-toggle__input"
                                  tabindex="-1"
                                  type="checkbox"
                                />
                                <span
                                  class="components-form-toggle__track"
                                />
                                <span
                                  class="components-form-toggle__thumb"
                                />
                              </span>
                              Taxes
                            </div>
                          </div>
                        </div>
                        <div
                          aria-checked="true"
                          class="woocommerce-ellipsis-menu__item"
                          role="menuitemcheckbox"
                          tabindex="0"
                        >
                          <div
                            class="components-base-control components-toggle-control"
                          >
                            <div
                              class="components-base-control__field"
                            >
                              <span
                                class="components-form-toggle is-checked"
                              >
                                <input
                                  aria-hidden="true"
                                  checked=""
                                  class="components-form-toggle__input"
                                  tabindex="-1"
                                  type="checkbox"
                                />
                                <span
                                  class="components-form-toggle__track"
                                />
                                <span
                                  class="components-form-toggle__thumb"
                                />
                              </span>
                              Shipping
                            </div>
                          </div>
                        </div>
                        <div
                          aria-checked="true"
                          class="woocommerce-ellipsis-menu__item"
                          role="menuitemcheckbox"
                          tabindex="0"
                        >
                          <div
                            class="components-base-control components-toggle-control"
                          >
                            <div
                              class="components-base-control__field"
                            >
                              <span
                                class="components-form-toggle is-checked"
                              >
                                <input
                                  aria-hidden="true"
                                  checked=""
                                  class="components-form-toggle__input"
                                  tabindex="-1"
                                  type="checkbox"
                                />
                                <span
                                  class="components-form-toggle__track"
                                />
                                <span
                                  class="components-form-toggle__thumb"
                                />
                              </span>
                              Net Sales
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="components-card__body css-xmjzce-BodyUI e1q7k77g3"
    >
      <div
        aria-hidden="false"
        aria-labelledby="caption-2"
        class="woocommerce-table__table"
        role="group"
      >
        <table>
          <caption
            class="woocommerce-table__caption screen-reader-text"
            id="caption-2"
          >
            Revenue
          </caption>
          <tbody>
            <tr>
              <th
                class="woocommerce-table__header"
                role="columnheader"
                scope="col"
              >
                <span
                  aria-hidden="false"
                >
                  Date
                </span>
              </th>
              <th
                class="woocommerce-table__header"
                role="columnheader"
                scope="col"
              >
                <span
                  aria-hidden="false"
                >
                  Orders
                </span>
              </th>
              <th
                class="woocommerce-table__header"
                role="columnheader"
                scope="col"
              >
                <span
                  aria-hidden="false"
                >
                  Total Sales
                </span>
              </th>
              <th
                class="woocommerce-table__header"
                role="columnheader"
                scope="col"
              >
                <span
                  aria-hidden="false"
                >
                  Refunds
                </span>
              </th>
              <th
                class="woocommerce-table__header"
                role="columnheader"
                scope="col"
              >
                <span
                  aria-hidden="false"
                >
                  Coupons
                </span>
              </th>
              <th
                class="woocommerce-table__header"
                role="columnheader"
                scope="col"
              >
                <span
                  aria-hidden="false"
                >
                  Taxes
                </span>
              </th>
              <th
                class="woocommerce-table__header"
                role="columnheader"
                scope="col"
              >
                <span
                  aria-hidden="false"
                >
                  Shipping
                </span>
              </th>
              <th
                class="woocommerce-table__header"
                role="columnheader"
                scope="col"
              >
                <span
                  aria-hidden="false"
                >
                  Net Sales
                </span>
              </th>
            </tr>
            <tr>
              <th
                class="woocommerce-table__item"
                scope="row"
              >
                10/01/2018
              </th>
              <td
                class="woocommerce-table__item"
              >
                1
              </td>
              <td
                class="woocommerce-table__item"
              >
                €411.00
              </td>
              <td
                class="woocommerce-table__item"
              >
                €0.00
              </td>
              <td
                class="woocommerce-table__item"
              >
                €10.00
              </td>
              <td
                class="woocommerce-table__item"
              >
                €0.00
              </td>
              <td
                class="woocommerce-table__item"
              >
                €0.00
              </td>
              <td
                class="woocommerce-table__item"
              >
                €411.00
              </td>
            </tr>
            <tr>
              <th
                class="woocommerce-table__item"
                scope="row"
              >
                10/02/2018
              </th>
              <td
                class="woocommerce-table__item"
              />
              <td
                class="woocommerce-table__item"
              >
                €0.00
              </td>
              <td
                class="woocommerce-table__item"
              >
                €0.00
              </td>
              <td
                class="woocommerce-table__item"
              >
                €0.00
              </td>
              <td
                class="woocommerce-table__item"
              >
                €0.00
              </td>
              <td
                class="woocommerce-table__item"
              >
                €0.00
              </td>
              <td
                class="woocommerce-table__item"
              >
                €0.00
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="components-flex components-card__footer is-size-medium e1q7k77g4 css-5hda2c-Flex-FooterUI eboqfv50"
    >
      <div
        class="woocommerce-pagination"
      >
        <div
          class="woocommerce-pagination__page-arrows"
        >
          <span
            aria-live="polite"
            class="woocommerce-pagination__page-arrows-label"
            role="status"
          >
            Page 1 of 5
          </span>
          <div
            class="woocommerce-pagination__page-arrows-buttons"
          >
            <button
              aria-label="Previous Page"
              class="components-button woocommerce-pagination__link"
              disabled=""
              type="button"
            >
              <svg
                aria-hidden="true"
                focusable="false"
                height="24"
                role="img"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M14.6 7l-1.2-1L8 12l5.4 6 1.2-1-4.6-5z"
                />
              </svg>
            </button>
            <button
              aria-label="Next Page"
              class="components-button woocommerce-pagination__link is-active"
              type="button"
            >
              <svg
                aria-hidden="true"
                focusable="false"
                height="24"
                role="img"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10.6 6L9.4 7l4.6 5-4.6 5 1.2 1 5.4-6z"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="woocommerce-pagination__page-picker"
        >
          <label
            class="woocommerce-pagination__page-picker-label"
            for="woocommerce-pagination-page-picker-1"
          >
            Go to page
            <input
              aria-invalid="false"
              class="woocommerce-pagination__page-picker-input"
              id="woocommerce-pagination-page-picker-1"
              max="5"
              min="1"
              type="number"
              value="1"
            />
          </label>
        </div>
        <div
          class="woocommerce-pagination__per-page-picker"
        >
          <div
            class="components-base-control"
          >
            <div
              class="components-base-control__field"
            >
              <div
                class="components-flex components-select-control e1cr7zh10 css-wvh565-Flex-Root eboqfv50"
              >
                <div
                  class="components-flex__item e1cr7zh14 css-d373l0-Item-LabelWrapper eboqfv51"
                >
                  <label
                    class="components-input-control__label css-1e8smfu-Text-BaseLabel e1cr7zh13"
                    for="inspector-select-control-0"
                  >
                    Rows per page
                  </label>
                </div>
                <div
                  class="components-input-control__container css-1d0yxvj-Container e1cr7zh11"
                >
                  <select
                    class="components-select-control__input css-1hft3f5-Select e12x0a390"
                    id="inspector-select-control-0"
                  >
                    <option
                      value="25"
                    >
                      25
                    </option>
                    <option
                      value="50"
                    >
                      50
                    </option>
                    <option
                      value="75"
                    >
                      75
                    </option>
                    <option
                      value="100"
                    >
                      100
                    </option>
                  </select>
                  <span
                    class="components-input-control__suffix css-1lym30p-Suffix e1cr7zh19"
                  >
                    <div
                      class="css-163e8ky-DownArrowWrapper e12x0a391"
                    >
                      <svg
                        aria-hidden="true"
                        focusable="false"
                        height="18"
                        role="img"
                        viewBox="0 0 24 24"
                        width="18"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M17.5 11.6L12 16l-5.5-4.4.9-1.2L12 14l4.5-3.6 1 1.2z"
                        />
                      </svg>
                    </div>
                  </span>
                  <fieldset
                    aria-hidden="true"
                    class="components-input-control__backdrop css-nonlsy-Fieldset e1cr7zh15"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <ul
        class="woocommerce-table__summary"
        role="complementary"
      >
        <li
          class="woocommerce-table__summary-item"
        >
          <span
            class="woocommerce-table__summary-value"
          >
            100
          </span>
          <span
            class="woocommerce-table__summary-label"
          >
            orders
          </span>
        </li>
        <li
          class="woocommerce-table__summary-item"
        >
          <span
            class="woocommerce-table__summary-value"
          >
            20
          </span>
          <span
            class="woocommerce-table__summary-label"
          >
            customers
          </span>
        </li>
        <li
          class="woocommerce-table__summary-item"
        >
          <span
            class="woocommerce-table__summary-value"
          >
            50
          </span>
          <span
            class="woocommerce-table__summary-label"
          >
            products
          </span>
        </li>
        <li
          class="woocommerce-table__summary-item"
        >
          <span
            class="woocommerce-table__summary-value"
          >
            0
          </span>
          <span
            class="woocommerce-table__summary-label"
          >
            coupons
          </span>
        </li>
        <li
          class="woocommerce-table__summary-item"
        >
          <span
            class="woocommerce-table__summary-value"
          >
            $12345.67
          </span>
          <span
            class="woocommerce-table__summary-label"
          >
            net sales
          </span>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`TableCard should not render placeholder Table and TableSummary when not loading 1`] = `
<div>
  <div
    class="components-card is-size-medium woocommerce-table has-menu css-1xs3c37-CardUI e1q7k77g0"
  >
    <div
      class="components-flex components-card__header is-size-medium e1q7k77g1 css-jsa6v9-Flex-HeaderUI eboqfv50"
    >
      <h2
        class="css-1ahfdc3-Text e15wbhsk0"
        size="20"
      >
        Revenue
      </h2>
      <div
        class="woocommerce-table__actions"
      />
      <div
        class="woocommerce-ellipsis-menu"
      >
        <div
          class="components-dropdown"
        >
          <button
            aria-expanded="false"
            class="components-button woocommerce-ellipsis-menu__toggle"
            title="Choose which values to display"
            type="button"
          >
            <svg
              class="gridicon gridicons-ellipsis"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g>
                <path
                  d="M7 12c0 1.104-.896 2-2 2s-2-.896-2-2 .896-2 2-2 2 .896 2 2zm12-2c-1.104 0-2 .896-2 2s.896 2 2 2 2-.896 2-2-.896-2-2-2zm-7 0c-1.104 0-2 .896-2 2s.896 2 2 2 2-.896 2-2-.896-2-2-2z"
                />
              </g>
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="components-card__body css-xmjzce-BodyUI e1q7k77g3"
    >
      <div
        aria-hidden="false"
        aria-labelledby="caption-1"
        class="woocommerce-table__table"
        role="group"
      >
        <table>
          <caption
            class="woocommerce-table__caption screen-reader-text"
            id="caption-1"
          >
            Revenue
          </caption>
          <tbody>
            <tr>
              <th
                class="woocommerce-table__header"
                role="columnheader"
                scope="col"
              >
                <span
                  aria-hidden="false"
                >
                  Date
                </span>
              </th>
              <th
                class="woocommerce-table__header"
                role="columnheader"
                scope="col"
              >
                <span
                  aria-hidden="false"
                >
                  Orders
                </span>
              </th>
              <th
                class="woocommerce-table__header"
                role="columnheader"
                scope="col"
              >
                <span
                  aria-hidden="false"
                >
                  Total Sales
                </span>
              </th>
              <th
                class="woocommerce-table__header"
                role="columnheader"
                scope="col"
              >
                <span
                  aria-hidden="false"
                >
                  Refunds
                </span>
              </th>
              <th
                class="woocommerce-table__header"
                role="columnheader"
                scope="col"
              >
                <span
                  aria-hidden="false"
                >
                  Coupons
                </span>
              </th>
              <th
                class="woocommerce-table__header"
                role="columnheader"
                scope="col"
              >
                <span
                  aria-hidden="false"
                >
                  Taxes
                </span>
              </th>
              <th
                class="woocommerce-table__header"
                role="columnheader"
                scope="col"
              >
                <span
                  aria-hidden="false"
                >
                  Shipping
                </span>
              </th>
              <th
                class="woocommerce-table__header"
                role="columnheader"
                scope="col"
              >
                <span
                  aria-hidden="false"
                >
                  Net Sales
                </span>
              </th>
            </tr>
            <tr>
              <th
                class="woocommerce-table__item"
                scope="row"
              >
                10/01/2018
              </th>
              <td
                class="woocommerce-table__item"
              >
                1
              </td>
              <td
                class="woocommerce-table__item"
              >
                €411.00
              </td>
              <td
                class="woocommerce-table__item"
              >
                €0.00
              </td>
              <td
                class="woocommerce-table__item"
              >
                €10.00
              </td>
              <td
                class="woocommerce-table__item"
              >
                €0.00
              </td>
              <td
                class="woocommerce-table__item"
              >
                €0.00
              </td>
              <td
                class="woocommerce-table__item"
              >
                €411.00
              </td>
            </tr>
            <tr>
              <th
                class="woocommerce-table__item"
                scope="row"
              >
                10/02/2018
              </th>
              <td
                class="woocommerce-table__item"
              />
              <td
                class="woocommerce-table__item"
              >
                €0.00
              </td>
              <td
                class="woocommerce-table__item"
              >
                €0.00
              </td>
              <td
                class="woocommerce-table__item"
              >
                €0.00
              </td>
              <td
                class="woocommerce-table__item"
              >
                €0.00
              </td>
              <td
                class="woocommerce-table__item"
              >
                €0.00
              </td>
              <td
                class="woocommerce-table__item"
              >
                €0.00
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="components-flex components-card__footer is-size-medium e1q7k77g4 css-5hda2c-Flex-FooterUI eboqfv50"
    >
      <ul
        class="woocommerce-table__summary"
        role="complementary"
      >
        <li
          class="woocommerce-table__summary-item"
        >
          <span
            class="woocommerce-table__summary-value"
          >
            100
          </span>
          <span
            class="woocommerce-table__summary-label"
          >
            orders
          </span>
        </li>
        <li
          class="woocommerce-table__summary-item"
        >
          <span
            class="woocommerce-table__summary-value"
          >
            20
          </span>
          <span
            class="woocommerce-table__summary-label"
          >
            customers
          </span>
        </li>
        <li
          class="woocommerce-table__summary-item"
        >
          <span
            class="woocommerce-table__summary-value"
          >
            50
          </span>
          <span
            class="woocommerce-table__summary-label"
          >
            products
          </span>
        </li>
        <li
          class="woocommerce-table__summary-item"
        >
          <span
            class="woocommerce-table__summary-value"
          >
            0
          </span>
          <span
            class="woocommerce-table__summary-label"
          >
            coupons
          </span>
        </li>
        <li
          class="woocommerce-table__summary-item"
        >
          <span
            class="woocommerce-table__summary-value"
          >
            $12345.67
          </span>
          <span
            class="woocommerce-table__summary-label"
          >
            net sales
          </span>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`TableCard should render placeholders for Table and TableSummary while loading 1`] = `
<div>
  <div
    class="components-card is-size-medium woocommerce-table has-menu css-1xs3c37-CardUI e1q7k77g0"
  >
    <div
      class="components-flex components-card__header is-size-medium e1q7k77g1 css-jsa6v9-Flex-HeaderUI eboqfv50"
    >
      <h2
        class="css-1ahfdc3-Text e15wbhsk0"
        size="20"
      >
        Revenue
      </h2>
      <div
        class="woocommerce-table__actions"
      />
      <div
        class="woocommerce-ellipsis-menu"
      >
        <div
          class="components-dropdown"
        >
          <button
            aria-expanded="false"
            class="components-button woocommerce-ellipsis-menu__toggle"
            title="Choose which values to display"
            type="button"
          >
            <svg
              class="gridicon gridicons-ellipsis"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g>
                <path
                  d="M7 12c0 1.104-.896 2-2 2s-2-.896-2-2 .896-2 2-2 2 .896 2 2zm12-2c-1.104 0-2 .896-2 2s.896 2 2 2 2-.896 2-2-.896-2-2-2zm-7 0c-1.104 0-2 .896-2 2s.896 2 2 2 2-.896 2-2-.896-2-2-2z"
                />
              </g>
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="components-card__body css-xmjzce-BodyUI e1q7k77g3"
    >
      <span
        class="screen-reader-text"
      >
        Your requested data is loading
      </span>
      <div
        aria-hidden="true"
        aria-labelledby="caption-0"
        class="woocommerce-table__table is-loading"
        role="group"
      >
        <table>
          <caption
            class="woocommerce-table__caption screen-reader-text"
            id="caption-0"
          >
            Revenue
          </caption>
          <tbody>
            <tr>
              <th
                class="woocommerce-table__header"
                role="columnheader"
                scope="col"
              >
                <span
                  aria-hidden="false"
                >
                  Date
                </span>
              </th>
              <th
                class="woocommerce-table__header"
                role="columnheader"
                scope="col"
              >
                <span
                  aria-hidden="false"
                >
                  Orders
                </span>
              </th>
              <th
                class="woocommerce-table__header"
                role="columnheader"
                scope="col"
              >
                <span
                  aria-hidden="false"
                >
                  Total Sales
                </span>
              </th>
              <th
                class="woocommerce-table__header"
                role="columnheader"
                scope="col"
              >
                <span
                  aria-hidden="false"
                >
                  Refunds
                </span>
              </th>
              <th
                class="woocommerce-table__header"
                role="columnheader"
                scope="col"
              >
                <span
                  aria-hidden="false"
                >
                  Coupons
                </span>
              </th>
              <th
                class="woocommerce-table__header"
                role="columnheader"
                scope="col"
              >
                <span
                  aria-hidden="false"
                >
                  Taxes
                </span>
              </th>
              <th
                class="woocommerce-table__header"
                role="columnheader"
                scope="col"
              >
                <span
                  aria-hidden="false"
                >
                  Shipping
                </span>
              </th>
              <th
                class="woocommerce-table__header"
                role="columnheader"
                scope="col"
              >
                <span
                  aria-hidden="false"
                >
                  Net Sales
                </span>
              </th>
            </tr>
            <tr>
              <th
                class="woocommerce-table__item"
                scope="row"
              >
                <span
                  class="is-placeholder"
                />
              </th>
              <td
                class="woocommerce-table__item"
              >
                <span
                  class="is-placeholder"
                />
              </td>
              <td
                class="woocommerce-table__item"
              >
                <span
                  class="is-placeholder"
                />
              </td>
              <td
                class="woocommerce-table__item"
              >
                <span
                  class="is-placeholder"
                />
              </td>
              <td
                class="woocommerce-table__item"
              >
                <span
                  class="is-placeholder"
                />
              </td>
              <td
                class="woocommerce-table__item"
              >
                <span
                  class="is-placeholder"
                />
              </td>
              <td
                class="woocommerce-table__item"
              >
                <span
                  class="is-placeholder"
                />
              </td>
              <td
                class="woocommerce-table__item"
              >
                <span
                  class="is-placeholder"
                />
              </td>
            </tr>
            <tr>
              <th
                class="woocommerce-table__item"
                scope="row"
              >
                <span
                  class="is-placeholder"
                />
              </th>
              <td
                class="woocommerce-table__item"
              >
                <span
                  class="is-placeholder"
                />
              </td>
              <td
                class="woocommerce-table__item"
              >
                <span
                  class="is-placeholder"
                />
              </td>
              <td
                class="woocommerce-table__item"
              >
                <span
                  class="is-placeholder"
                />
              </td>
              <td
                class="woocommerce-table__item"
              >
                <span
                  class="is-placeholder"
                />
              </td>
              <td
                class="woocommerce-table__item"
              >
                <span
                  class="is-placeholder"
                />
              </td>
              <td
                class="woocommerce-table__item"
              >
                <span
                  class="is-placeholder"
                />
              </td>
              <td
                class="woocommerce-table__item"
              >
                <span
                  class="is-placeholder"
                />
              </td>
            </tr>
            <tr>
              <th
                class="woocommerce-table__item"
                scope="row"
              >
                <span
                  class="is-placeholder"
                />
              </th>
              <td
                class="woocommerce-table__item"
              >
                <span
                  class="is-placeholder"
                />
              </td>
              <td
                class="woocommerce-table__item"
              >
                <span
                  class="is-placeholder"
                />
              </td>
              <td
                class="woocommerce-table__item"
              >
                <span
                  class="is-placeholder"
                />
              </td>
              <td
                class="woocommerce-table__item"
              >
                <span
                  class="is-placeholder"
                />
              </td>
              <td
                class="woocommerce-table__item"
              >
                <span
                  class="is-placeholder"
                />
              </td>
              <td
                class="woocommerce-table__item"
              >
                <span
                  class="is-placeholder"
                />
              </td>
              <td
                class="woocommerce-table__item"
              >
                <span
                  class="is-placeholder"
                />
              </td>
            </tr>
            <tr>
              <th
                class="woocommerce-table__item"
                scope="row"
              >
                <span
                  class="is-placeholder"
                />
              </th>
              <td
                class="woocommerce-table__item"
              >
                <span
                  class="is-placeholder"
                />
              </td>
              <td
                class="woocommerce-table__item"
              >
                <span
                  class="is-placeholder"
                />
              </td>
              <td
                class="woocommerce-table__item"
              >
                <span
                  class="is-placeholder"
                />
              </td>
              <td
                class="woocommerce-table__item"
              >
                <span
                  class="is-placeholder"
                />
              </td>
              <td
                class="woocommerce-table__item"
              >
                <span
                  class="is-placeholder"
                />
              </td>
              <td
                class="woocommerce-table__item"
              >
                <span
                  class="is-placeholder"
                />
              </td>
              <td
                class="woocommerce-table__item"
              >
                <span
                  class="is-placeholder"
                />
              </td>
            </tr>
            <tr>
              <th
                class="woocommerce-table__item"
                scope="row"
              >
                <span
                  class="is-placeholder"
                />
              </th>
              <td
                class="woocommerce-table__item"
              >
                <span
                  class="is-placeholder"
                />
              </td>
              <td
                class="woocommerce-table__item"
              >
                <span
                  class="is-placeholder"
                />
              </td>
              <td
                class="woocommerce-table__item"
              >
                <span
                  class="is-placeholder"
                />
              </td>
              <td
                class="woocommerce-table__item"
              >
                <span
                  class="is-placeholder"
                />
              </td>
              <td
                class="woocommerce-table__item"
              >
                <span
                  class="is-placeholder"
                />
              </td>
              <td
                class="woocommerce-table__item"
              >
                <span
                  class="is-placeholder"
                />
              </td>
              <td
                class="woocommerce-table__item"
              >
                <span
                  class="is-placeholder"
                />
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="components-flex components-card__footer is-size-medium e1q7k77g4 css-5hda2c-Flex-FooterUI eboqfv50"
    >
      <ul
        class="woocommerce-table__summary is-loading"
        role="complementary"
      >
        <li
          class="woocommerce-table__summary-item"
        >
          <span
            class="is-placeholder"
          />
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`TableCard should render rows correctly with custom rowKey prop 1`] = `
<div>
  <div
    class="components-card is-size-medium woocommerce-table has-menu css-1xs3c37-CardUI e1q7k77g0"
  >
    <div
      class="components-flex components-card__header is-size-medium e1q7k77g1 css-jsa6v9-Flex-HeaderUI eboqfv50"
    >
      <h2
        class="css-1ahfdc3-Text e15wbhsk0"
        size="20"
      >
        Revenue
      </h2>
      <div
        class="woocommerce-table__actions"
      />
      <div
        class="woocommerce-ellipsis-menu"
      >
        <div
          class="components-dropdown"
        >
          <button
            aria-expanded="false"
            class="components-button woocommerce-ellipsis-menu__toggle"
            title="Choose which values to display"
            type="button"
          >
            <svg
              class="gridicon gridicons-ellipsis"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g>
                <path
                  d="M7 12c0 1.104-.896 2-2 2s-2-.896-2-2 .896-2 2-2 2 .896 2 2zm12-2c-1.104 0-2 .896-2 2s.896 2 2 2 2-.896 2-2-.896-2-2-2zm-7 0c-1.104 0-2 .896-2 2s.896 2 2 2 2-.896 2-2-.896-2-2-2z"
                />
              </g>
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="components-card__body css-xmjzce-BodyUI e1q7k77g3"
    >
      <div
        aria-hidden="false"
        aria-labelledby="caption-3"
        class="woocommerce-table__table"
        role="group"
      >
        <table>
          <caption
            class="woocommerce-table__caption screen-reader-text"
            id="caption-3"
          >
            Revenue
          </caption>
          <tbody>
            <tr>
              <th
                class="woocommerce-table__header"
                role="columnheader"
                scope="col"
              >
                <span
                  aria-hidden="false"
                >
                  Date
                </span>
              </th>
              <th
                class="woocommerce-table__header"
                role="columnheader"
                scope="col"
              >
                <span
                  aria-hidden="false"
                >
                  Orders
                </span>
              </th>
              <th
                class="woocommerce-table__header"
                role="columnheader"
                scope="col"
              >
                <span
                  aria-hidden="false"
                >
                  Total Sales
                </span>
              </th>
              <th
                class="woocommerce-table__header"
                role="columnheader"
                scope="col"
              >
                <span
                  aria-hidden="false"
                >
                  Refunds
                </span>
              </th>
              <th
                class="woocommerce-table__header"
                role="columnheader"
                scope="col"
              >
                <span
                  aria-hidden="false"
                >
                  Coupons
                </span>
              </th>
              <th
                class="woocommerce-table__header"
                role="columnheader"
                scope="col"
              >
                <span
                  aria-hidden="false"
                >
                  Taxes
                </span>
              </th>
              <th
                class="woocommerce-table__header"
                role="columnheader"
                scope="col"
              >
                <span
                  aria-hidden="false"
                >
                  Shipping
                </span>
              </th>
              <th
                class="woocommerce-table__header"
                role="columnheader"
                scope="col"
              >
                <span
                  aria-hidden="false"
                >
                  Net Sales
                </span>
              </th>
            </tr>
            <tr>
              <th
                class="woocommerce-table__item"
                scope="row"
              >
                10/01/2018
              </th>
              <td
                class="woocommerce-table__item"
              >
                1
              </td>
              <td
                class="woocommerce-table__item"
              >
                €411.00
              </td>
              <td
                class="woocommerce-table__item"
              >
                €0.00
              </td>
              <td
                class="woocommerce-table__item"
              >
                €10.00
              </td>
              <td
                class="woocommerce-table__item"
              >
                €0.00
              </td>
              <td
                class="woocommerce-table__item"
              >
                €0.00
              </td>
              <td
                class="woocommerce-table__item"
              >
                €411.00
              </td>
            </tr>
            <tr>
              <th
                class="woocommerce-table__item"
                scope="row"
              >
                10/02/2018
              </th>
              <td
                class="woocommerce-table__item"
              />
              <td
                class="woocommerce-table__item"
              >
                €0.00
              </td>
              <td
                class="woocommerce-table__item"
              >
                €0.00
              </td>
              <td
                class="woocommerce-table__item"
              >
                €0.00
              </td>
              <td
                class="woocommerce-table__item"
              >
                €0.00
              </td>
              <td
                class="woocommerce-table__item"
              >
                €0.00
              </td>
              <td
                class="woocommerce-table__item"
              >
                €0.00
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="components-flex components-card__footer is-size-medium e1q7k77g4 css-5hda2c-Flex-FooterUI eboqfv50"
    >
      <div
        class="woocommerce-pagination"
      >
        <div
          class="woocommerce-pagination__page-arrows"
        >
          <span
            aria-live="polite"
            class="woocommerce-pagination__page-arrows-label"
            role="status"
          >
            Page 1 of 5
          </span>
          <div
            class="woocommerce-pagination__page-arrows-buttons"
          >
            <button
              aria-label="Previous Page"
              class="components-button woocommerce-pagination__link"
              disabled=""
              type="button"
            >
              <svg
                aria-hidden="true"
                focusable="false"
                height="24"
                role="img"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M14.6 7l-1.2-1L8 12l5.4 6 1.2-1-4.6-5z"
                />
              </svg>
            </button>
            <button
              aria-label="Next Page"
              class="components-button woocommerce-pagination__link is-active"
              type="button"
            >
              <svg
                aria-hidden="true"
                focusable="false"
                height="24"
                role="img"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10.6 6L9.4 7l4.6 5-4.6 5 1.2 1 5.4-6z"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="woocommerce-pagination__page-picker"
        >
          <label
            class="woocommerce-pagination__page-picker-label"
            for="woocommerce-pagination-page-picker-2"
          >
            Go to page
            <input
              aria-invalid="false"
              class="woocommerce-pagination__page-picker-input"
              id="woocommerce-pagination-page-picker-2"
              max="5"
              min="1"
              type="number"
              value="1"
            />
          </label>
        </div>
        <div
          class="woocommerce-pagination__per-page-picker"
        >
          <div
            class="components-base-control"
          >
            <div
              class="components-base-control__field"
            >
              <div
                class="components-flex components-select-control e1cr7zh10 css-wvh565-Flex-Root eboqfv50"
              >
                <div
                  class="components-flex__item e1cr7zh14 css-d373l0-Item-LabelWrapper eboqfv51"
                >
                  <label
                    class="components-input-control__label css-1e8smfu-Text-BaseLabel e1cr7zh13"
                    for="inspector-select-control-1"
                  >
                    Rows per page
                  </label>
                </div>
                <div
                  class="components-input-control__container css-1d0yxvj-Container e1cr7zh11"
                >
                  <select
                    class="components-select-control__input css-1hft3f5-Select e12x0a390"
                    id="inspector-select-control-1"
                  >
                    <option
                      value="25"
                    >
                      25
                    </option>
                    <option
                      value="50"
                    >
                      50
                    </option>
                    <option
                      value="75"
                    >
                      75
                    </option>
                    <option
                      value="100"
                    >
                      100
                    </option>
                  </select>
                  <span
                    class="components-input-control__suffix css-1lym30p-Suffix e1cr7zh19"
                  >
                    <div
                      class="css-163e8ky-DownArrowWrapper e12x0a391"
                    >
                      <svg
                        aria-hidden="true"
                        focusable="false"
                        height="18"
                        role="img"
                        viewBox="0 0 24 24"
                        width="18"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M17.5 11.6L12 16l-5.5-4.4.9-1.2L12 14l4.5-3.6 1 1.2z"
                        />
                      </svg>
                    </div>
                  </span>
                  <fieldset
                    aria-hidden="true"
                    class="components-input-control__backdrop css-nonlsy-Fieldset e1cr7zh15"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <ul
        class="woocommerce-table__summary"
        role="complementary"
      >
        <li
          class="woocommerce-table__summary-item"
        >
          <span
            class="woocommerce-table__summary-value"
          >
            100
          </span>
          <span
            class="woocommerce-table__summary-label"
          >
            orders
          </span>
        </li>
        <li
          class="woocommerce-table__summary-item"
        >
          <span
            class="woocommerce-table__summary-value"
          >
            20
          </span>
          <span
            class="woocommerce-table__summary-label"
          >
            customers
          </span>
        </li>
        <li
          class="woocommerce-table__summary-item"
        >
          <span
            class="woocommerce-table__summary-value"
          >
            50
          </span>
          <span
            class="woocommerce-table__summary-label"
          >
            products
          </span>
        </li>
        <li
          class="woocommerce-table__summary-item"
        >
          <span
            class="woocommerce-table__summary-value"
          >
            0
          </span>
          <span
            class="woocommerce-table__summary-label"
          >
            coupons
          </span>
        </li>
        <li
          class="woocommerce-table__summary-item"
        >
          <span
            class="woocommerce-table__summary-value"
          >
            $12345.67
          </span>
          <span
            class="woocommerce-table__summary-label"
          >
            net sales
          </span>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
